# easypip

./: .gitignore  README.md  pyproject.toml
easypip/: __main__.py  cli.py
