[project]
name = "easypip"
version = "0.1.0"
description = "simple wrapper of pip command"
authors = [
    {name = "Yuuya Watabe", email = "watabe951@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.scripts]
easypip = 'easypip.cli:main'

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
